make .break-word standards compliant, fixes layout issues in firefox

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -111,7 +111,7 @@ body.darkBG .navbar-fixed-bottom a {
 }
 .break-word {
   word-wrap: break-word;
-  word-break: break-word;
+  word-break: break-all;
 }
 .fs11 {
   font-size: 11px !important;
